--- a/index.html
+++ b/index.html
@@ -68,46 +68,29 @@
   <div class="column">
     <div></div>
   </div>
-  <div class="column" style="align-content: center;">
+  <div class="column-md-3">
     <div class="callout">
       <p style="text-align: center;">Selections</p>
-      <p><img src="https://placehold.it/400x370&text=food image" alt="food image"></p>
-      <p><img src="https://placehold.it/400x370&text=drink image" alt="drink image"></p>
-      <p><img src="https://placehold.it/400x370&text=movie image" alt="movie image"></p>
+      <a><img src="https://placehold.it/370x340&text=food image" alt="food image" style="padding-left: 5;">
+      <img src="https://placehold.it/370x340&text=drink image" alt="drink image" style="padding-left: 5;">
+      <img src="https://placehold.it/370x340&text=movie image" alt="movie image"></a>
       <p class="subheader" style="text-align: center;"></p>
     </div>
   </div>
-  <div class="row">
+
+  <div class="column-md-3">
+    <div></div>
+  </div>
+</div>
+<div class="row small-up-1 medium-up-2 large-up-3">
     <div class="column">
       <div class="callout">
         <p class="subheader" style="text-align: center;">Congratulations!<br>You just planned Date-Night!<br>Click the Download Your Date-Night Menu to Save!</p>
         <a class="button hollow expanded">Download Your Date-Night Menu</a>
       </div>
     </div>
-  </div>
 </div>
-<!-- <div class="row">
-    <div class="column center" style="align-items: center;">
-        <div class="callout">
-            <p style="text-align: center;">Menu</p>
-            <div class="row" style="align-content: center;">
-                <div class="media-object">
-                    <div class="media-object-section align-self-middle callout" style="align-content: center;">
-                        <a class="callout" style="align-content: center;"><img src="https://placehold.it/360x330&text=Menu" alt="MenuFood"></a>
-                        <br>
-                        <a class="callout" style="align-content: center;"><img src="https://placehold.it/360x330&text=Menu" alt="MenuDrink"></a>
-                        <br>
-                        <a class="callout" style="align-content: center;"><img src="https://placehold.it/360x330&text=Menu" alt="MenuMovie"></a>
-                    </div>
-                </div>
-            </div>
-            <p class="subheader" style="text-align: center;">Congratulations!<br>You just planned Date-Night!<br>Click the Download Your Date-Night Menu to Save!</p>
-            <a class="button hollow expanded">Download Your Date-Night Menu</a>
-            <div><br></div>
-        </div>
-        <div><br></div>
-    </div>
-</div> -->
+
 <footer>
   <div class="row expanded callout secondary" style="align-content:center">
     <div style="align-content: center;">
