worked on apis and functions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p style="text-align: center;"">Food</p>
       <p><img src="https://placehold.it/400x370&text=food image" alt="food image"></p>
       <p class="subheader" style="text-align: center;">Click Suggest a Recipe to Generate a Random Suggestion,<br>Wanna add it to your Menu?<br>Click Add to Menu!</p>
-      <a class="button hollow expanded">Suggest a Recipe</a>
+      <a class="button hollow expanded" id="food">Suggest a Recipe</a>
       <a class="button hollow expanded">Add to Menu</a>
     </div>
   </div>
@@ -49,7 +49,7 @@
       <p style="text-align: center;">Drinks</p>
       <p><img src="https://placehold.it/400x370&text=drink image" alt="drink image"></p>
       <p class="subheader" style="text-align: center;">Click Suggest a Drink to Generate a Random Suggestion,<br>Wanna add it to your Menu?<br>Click Add to Menu!</p>
-      <a class="button hollow expanded">Suggest a Drink</a>
+      <a class="button hollow expanded" id="drink">Suggest a Drink</a>
       <a class="button hollow expanded">Add to Menu</a>
     </div>
   </div>
@@ -58,7 +58,7 @@
       <p style="text-align: center;">Movies</p>
       <p><img src="https://placehold.it/400x370&text=movie image" alt="movie image"></p>
       <p class="subheader" style="text-align: center;">Click Suggest a Movie to Generate a Random Suggestion,<br>Wanna add it to your Menu?<br>Click Add to Menu!</p>
-      <a class="button hollow expanded">Suggest a Movie</a>
+      <a class="button hollow expanded" id="movie">Suggest a Movie</a>
       <a class="button hollow expanded">Add to Menu</a>
     </div>
   </div>
