--- a/menu.html
+++ b/menu.html
@@ -36,8 +36,8 @@
           </div>
         </div>
         <div class="media-object-section main-section">
-          <h4>Dreams feel real while we're in them.</h4>
-          <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+          <h4 id="foodTitle"></h4>
+          <p id="foodRecipe"></p>
         </div>
       </div>
       <div class="media-object">
@@ -47,8 +47,8 @@
           </div>
         </div>
         <div class="media-object-section main-section">
-          <h4>Dreams feel real while we're in them.</h4>
-          <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+          <h4 id="drinkTitle"></h4>
+          <p id="drinkRecipe"></p>
         </div>
       </div>
       <div class="media-object">
@@ -58,8 +58,8 @@
           </div>
         </div>
         <div class="media-object-section main-section">
-          <h4>Dreams feel real while we're in them.</h4>
-          <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+          <h4 id="movieTitle"></h4>
+          <p id="plot"></p>
         </div>
       </div>
       <div class="column" style="width: 100%;">
