--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,8 @@
         </div>
         <div class="media-object-section main-section">
           <h4 id="foodTitle"></h4>
-          <p id="foodRecipe"></p>
+          <div id="foodRecipe"></div>
+          <a class="button hollow expanded box" id="foodDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here ❤️</a>
         </div>
     </div>
     <br>
@@ -51,19 +52,21 @@
         </div>
         <div class="media-object-section main-section">
           <h4 id="drinkTitle"></h4>
-          <p id="drinkRecipe"></p>
+          <div id="drinkRecipe"></div>
+          <a class="button hollow expanded box" id="drinkDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here ❤️</a>
         </div>
     </div>
     <br>
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div class="thumbnail">
-            <a id="movieImg"></a> 
+            <a id="movieImg"></a>
           </div>
         </div>
         <div class="media-object-section main-section">
           <h4 id="movieTitle"></h4>
           <p id="plot"></p>
+          <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here ❤️</a> 
         </div>
     </div>
       <div class="row small-up-1">
