--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
         </div>
         <div class="media-object-section main-section">
           <h4 id="foodTitle"></h4>
-          <p id="foodRecipe"></p>
+          <div id="foodRecipe"></div>
         </div>
     </div>
     <br>
@@ -51,7 +51,7 @@
         </div>
         <div class="media-object-section main-section">
           <h4 id="drinkTitle"></h4>
-          <p id="drinkRecipe"></p>
+          <div id="drinkRecipe"></div>
         </div>
     </div>
     <br>
