changes to id's

--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
         </div>
         <div class="media-object-section main-section">
           <h4 id="foodTitle"></h4>
-          <p id="foodRecipe"></p>
+          <div id="foodRecipe"></div>
         </div>
     </div>
     <br>
@@ -51,7 +51,7 @@
         </div>
         <div class="media-object-section main-section">
           <h4 id="drinkTitle"></h4>
-          <p id="drinkRecipe"></p>
+          <div id="drinkRecipe"></div>
         </div>
     </div>
     <br>
@@ -64,6 +64,7 @@
         <div class="media-object-section main-section">
           <h4 id="movieTitle"></h4>
           <p id="plot"></p>
+          <a class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here to Download your Date-Night Menu ❤️</a>
         </div>
     </div>
       <div class="row small-up-1">
