--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
         <div class="media-object-section main-section">
           <h4 id="foodTitle"></h4>
           <div id="foodRecipe"></div>
-          <a class="button hollow expanded box" id="foodDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here ❤️</a>
+          <a class="button hollow expanded box" id="foodDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Recipe ❤️</a>
         </div>
     </div>
     <br>
@@ -53,7 +53,7 @@
         <div class="media-object-section main-section">
           <h4 id="drinkTitle"></h4>
           <div id="drinkRecipe"></div>
-          <a class="button hollow expanded box" id="drinkDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here ❤️</a>
+          <a class="button hollow expanded box" id="drinkDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Drink ❤️</a>
         </div>
     </div>
     <br>
@@ -66,7 +66,11 @@
         <div class="media-object-section main-section">
           <h4 id="movieTitle"></h4>
           <p id="plot"></p>
-          <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here ❤️</a> 
+          <p id="actors"></p>
+          <p id="director"></p>
+          <p id="released"></p>
+          <p id="rated"></p>
+          <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Movie ❤️</a> 
         </div>
     </div>
       <div class="row small-up-1">
