--- a/menu.html
+++ b/menu.html
@@ -31,36 +31,42 @@
         </div>
       </div>
     </div>
-    <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
+    <div class="media-object callout box center" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
-          <div class="thumbnail">
-            <a id="foodImg"></a>
+          <div>
+            <a id="foodImg"><img src="assets/images/FOOD.png" style="width: 150px; height: 150px;"></a>
           </div>
         </div>
         <div class="media-object-section main-section">
           <h4 id="foodTitle"></h4>
           <div id="foodRecipe"></div>
-          <a class="button hollow expanded box" id="foodDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Recipe ❤️</a>
+        </div>
+        <br>
+        <div>
+            <a class="button hollow expanded box" id="foodDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Recipe ❤️</a>
         </div>
     </div>
     <br>
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
-          <div class="thumbnail">
-            <a id="drinkImg"></a>
+          <div>
+            <a id="drinkImg"><img src="assets/images/BAR.png" style="width: 150px; height: 150px "></a>
           </div>
         </div>
         <div class="media-object-section main-section">
           <h4 id="drinkTitle"></h4>
           <div id="drinkRecipe"></div>
-          <a class="button hollow expanded box" id="drinkDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Drink ❤️</a>
+        </div>
+        <br>
+        <div>
+            <a class="button hollow expanded box" id="drinkDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Drink ❤️</a>
         </div>
     </div>
     <br>
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
-          <div class="thumbnail">
-            <a id="movieImg"></a>
+          <div>
+            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 150px; height: 150px"></a>
           </div>
         </div>
         <div class="media-object-section main-section">
@@ -70,7 +76,10 @@
           <p id="director"></p>
           <p id="released"></p>
           <p id="rated"></p>
-          <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Movie ❤️</a> 
+        </div>
+        <br>
+        <div>
+            <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Movie ❤️</a> 
         </div>
     </div>
       <div class="row small-up-1">
