--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </div>
       </div>
     </div>
+    <div class="row small-up-1">
+      <div class="column" style="align-content: center;" width="100%">
+        <div>
+          <a href="menu.html" class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #50BA66; border-radius: 20px; color:whitesmoke; font-size: 20px;"><b>Click Here: Start building your Date-Night Menu ❤️</b></a>
+        </div>
+        <br>
+      </div>
+    </div>
     <div class="row column"></div>
     <div class="row small-up-1 medium-up-3 large-up-3">
       <div class="column">
@@ -55,16 +63,7 @@
         </div>
       </div>
     </div>
-      <div class="row small-up-1">
-        <div class="column" style="align-content: center;" width="100%">
-          <div>
-          
-            <br>
-            <a href="menu.html" class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here to start building your Date-Night Menu ❤️</a>
-          </div>
-        </div>
-      </div>
-    
+
     <footer>
       <div class="row">
         <div style="align-content: center; margin: 0; margin-bottom: 0; padding: 0;">
