--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
     <div class="media-object callout box center" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div>
-            <a id="foodImg"><img src="assets/images/FOOD.png" style="width: 150px; height: 150px;"></a>
+            <a id="foodImg"><img src="assets/images/FOOD.png" style="width: 300px; height: 300px;"></a>
           </div>
         </div>
         <div class="media-object-section main-section">
@@ -50,7 +50,7 @@
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div>
-            <a id="drinkImg"><img src="assets/images/BAR.png" style="width: 150px; height: 150px "></a>
+            <a id="drinkImg"><img src="assets/images/BAR.png" style="width: 300px; height: 300px "></a>
           </div>
         </div>
         <div class="media-object-section main-section">
@@ -66,7 +66,7 @@
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div>
-            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 150px; height: 150px"></a>
+            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px"></a>
           </div>
         </div>
         <div class="media-object-section main-section">
@@ -86,12 +86,11 @@
         <div class="column" style="align-content: center;" width="100%">
           <div>
             <br>
-            <br>
-            <a class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">Click here to Download your Date-Night Menu ❤️</a>
+            <a href="menu.html" class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #50BA66; border-radius: 20px; color:whitesmoke; font-size: 20px;">Download Your Date-Night Menu ❤️</a>
           </div>
         </div>
       </div>
-
+      
     <footer>
       <div class="row">
         <div style="align-content: center; margin: 0; margin-bottom: 0; padding: 0;">
