--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <!-- /Navigation -->
-
+    <!-- /Header Section -->
     <div class="row">
       <div style="text-decoration-color: grey; text-align: center; text-decoration-color: darkgrey;">
         <h1 style="color: #535353;">Covid Date-Night</h1>
@@ -39,7 +39,7 @@
         <br>
       </div>
     </div>
-    <div class="row column"></div>
+    <!-- <div class="row column"></div>
     <div class="row small-up-1 medium-up-3 large-up-3">
       <div class="column">
         <div class="callout box" style="border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 5px; margin-right: 5px;">
@@ -62,7 +62,7 @@
           <p class="subheader" style="color:#535353; text-align: center; text-decoration-color: darkgrey;">Random movie roulette - get recommendations on the best films!</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <footer>
       <div class="row">
