--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
         <br>
         <div class="row column" width="700" height="150">
           <div class="column" style="margin-left: 0; margin-right: 0">
-            <p class="callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">Welcome to Covid Date-Night!<br>We bet you're wondering what is Covid Date-Night?<br>Well, we're your helpful guide to having a good time staying at home!<br>Our site helps you and your significant other find A delicious Food and Drink recipe, and also suggesting a Movie to enjoy!<br>Helping you have the best time at home!</p><br>
+            <p class="callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">Below are the tools to build your Covid Date Night!<br>Click the button next to each option to generate a random meal, drink, and movie to enjoy.<br>Once you are happy with your selections,<br>click the download button to save them for later!<br>Have a nice night!</p><br>
           </div>
         </div>
       </div>
@@ -38,8 +38,8 @@
           </div>
         </div>
         <div class="media-object-section main-section">
-          <h4 id="foodTitle"></h4>
-          <div id="foodRecipe"></div>
+          <h4 id="foodTitle">Recipe Catelog</h4>
+          <div id="foodRecipe">Click the button below to view</div>
         </div>
         <br>
         <div>
@@ -51,12 +51,11 @@
         <div class="media-object-section">
           <div>
             <a id="drinkImg"><img src="assets/images/BAR.png" style="width: 300px; height: 300px "></a>
+            <h4 id="drinkTitle">Drink Catelog</h4>
+            <div id="drinkRecipe">ima get get get you drunk</div>
           </div>
         </div>
-        <div class="media-object-section main-section">
-          <h4 id="drinkTitle"></h4>
-          <div id="drinkRecipe"></div>
-        </div>
+
         <br>
         <div>
             <a class="button hollow expanded box" id="drinkDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Drink ❤️</a>
@@ -66,12 +65,12 @@
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div>
-            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px"></a>
+            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px;></a>
           </div>
         </div>
-        <div class="media-object-section main-section">
-          <h4 id="movieTitle"></h4>
-          <p id="plot"></p>
+        <div class="media-object-section main-section" style="align-content: center;">
+          <h4 id="movieTitle">Movie Catelog</h4>
+          <p id="plot">Random movie roulette - get recommendations on the best films!</p>
           <p id="actors"></p>
           <p id="director"></p>
           <p id="released"></p>
@@ -90,7 +89,7 @@
           </div>
         </div>
       </div>
-      
+
     <footer>
       <div class="row">
         <div style="align-content: center; margin: 0; margin-bottom: 0; padding: 0;">
