--- a/menu.html
+++ b/menu.html
@@ -31,15 +31,13 @@
         </div>
       </div>
     </div>
-    <div class="media-object callout box center" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
+    <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div>
             <a id="foodImg"><img src="assets/images/FOOD.png" style="width: 300px; height: 300px;"></a>
+            <h4 id="foodTitle">Recipe Catelog</h4>
+            <div id="foodRecipe">Click the button below to view</div>
           </div>
-        </div>
-        <div class="media-object-section main-section">
-          <h4 id="foodTitle">Recipe Catelog</h4>
-          <div id="foodRecipe">Click the button below to view</div>
         </div>
         <br>
         <div>
@@ -62,21 +60,19 @@
         </div>
     </div>
     <br>
-    <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
+    <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;"">
         <div class="media-object-section">
           <div>
-            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px;></a>
+            <a id="movieImg" style="align-content: center;"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px;"></a>
+            <br>
+            <h4 id="movieTitle">Movie Catelog</h4>
+            <p id="plot">Random Movie Roulette</p>
+            <p id="actors"></p>
+            <p id="director"></p>
+            <p id="released"></p>
+            <p id="rated"></p>
           </div>
         </div>
-        <div class="media-object-section main-section" style="align-content: center;">
-          <h4 id="movieTitle">Movie Catelog</h4>
-          <p id="plot">Random movie roulette - get recommendations on the best films!</p>
-          <p id="actors"></p>
-          <p id="director"></p>
-          <p id="released"></p>
-          <p id="rated"></p>
-        </div>
-        <br>
         <div>
             <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #EFCFCF; border-radius: 20px; color:#535353">View a Movie ❤️</a> 
         </div>
