--- a/menu.html
+++ b/menu.html
@@ -65,7 +65,7 @@
     <div class="media-object callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
         <div class="media-object-section">
           <div>
-            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px;></a>
+            <a id="movieImg"><img src="assets/images/MOVIE.png" style="width: 300px; height: 300px;"></a>
           </div>
         </div>
         <div class="media-object-section main-section" style="align-content: center;">
