final push with edits

--- a/index.html
+++ b/index.html
@@ -7,48 +7,57 @@
     <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
-  <body style="background-color: #F7EAEA;">
-    <!-- Navigation -->
-    <div class="top-bar" id="realEstateMenu" style="background-color: #F7EAEA;">
-      <div class="top-bar-left">
+  <body class="body">
+            <!-- NAVIGATION BAR START -->
+    <div class="body navButton" id="realEstateMenu">
+      <div class="top-bar-left body">
         <div class="menu" data-responsive-menu="accordion">
-          <button><a href="index.html" class="button box" style="border-radius: 20px; background-color: #EABDBD; color:#535353;">HOME</a></button>
+            <!-- HOME BUTTON START -->
+          <button><a href="index.html" class="button box buttonbox">HOME</a></button>
+            <!-- HOME BUTTON END -->
         </div>
       </div>
     </div>
-    <!-- /Navigation -->
-    <!-- /Header Section -->
+            <!-- NAVIGATION BAR END -->
+            <!-- HEADER START -->
     <div class="row">
-      <div style="text-decoration-color: grey; text-align: center; text-decoration-color: darkgrey;">
+      <div class="rowyourboat">
         <h1 style="color: #535353;">Covid Date-Night</h1>
         <h5 style="color: #535353;">Stay Home, Stay Well!</h5>
+            <!-- HEADER END -->
+            <!-- DATE NIGHT COUPLE IMAGE START -->
         <p><img src="./assets/images/DATENIGHT.png" alt="date-night image" class="box" style="border-radius: 100%" width="500" height="500"></p>
+            <!-- DATE NIGHT COUPLE IMAGE END -->
+            <!-- INTRO SECTION START -->
         <br>
-        <div class="row column" width="700" height="150">
-          <div class="column" style="margin-left: 0; margin-right: 0">
-            <p class="callout box" style="color: #535353; border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 40px; margin-right: 40px;">Welcome to Covid Date-Night!<br>Your one stop shop to boredom relief.<br>Couples around the globe are going stir-crazy due to Covid-19.<br>No more indecisiveness; in one click we will choose a meal recipe,<br>drink recipe, & a movie suggestion for your night!</p><br>
+        <div class="row column rowcolumn">
+          <div class="column column1">
+            <p class="callout box calloutbox">Welcome to Covid Date-Night!<br>Your one stop shop to boredom relief.<br>Couples around the globe are going stir-crazy due to Covid-19.<br>No more indecisiveness; in one click we will choose a meal recipe,<br>drink recipe, & a movie suggestion for your night!</p><br>
           </div>
         </div>
       </div>
     </div>
+            <!-- INTRO SECTION END -->
+            <!-- BUILD BUTTON START -->
     <div class="row small-up-1">
       <div class="column" style="align-content: center;" width="100%">
         <div>
-          <a href="menu.html" class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #50BA66; border-radius: 20px; color:whitesmoke; font-size: 20px;"><b>Click Here: Start building your Date-Night Menu ❤️</b></a>
+          <a href="menu.html" class="menuDirect1 button hollow expanded box" id="menuDirect" style="border: none; background-color: #50ba66; border-radius: 20px; color: whitesmoke; font-size: 20px;"><b>Click Here: Start building your Date-Night Menu ❤️</b></a>
         </div>
         <br>
       </div>
-      
     </div>
-
+            <!-- BUILD BUTTON END -->
+            <!-- FOOTER START -->
     <footer>
       <div class="row">
-        <div style="align-content: center; margin: 0; margin-bottom: 0; padding: 0;">
-            <p style="background-color: F7EAEA; text-align: center; color: white;">Cheers from the Covid Date-Night Team!<br>Covid Date-Night 2020 Project#1:<br>Kate, Skye, James, Mike</p>
+        <div class="row1">
+            <p class="ftag">Cheers from the Covid Date-Night Team!<br>Covid Date-Night 2020 Project#1:<br>Kate, Skye, James, Mike</p>
         </div>
       </div>
     </footer>
-    <!-- <script src="https://foundation.sticky.js"></script> -->
+            <!-- FOOTER END -->
+            <!-- JS TAGS BELOW -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
     <script src="./assets/script.js"></script>
