--- a/menu.html
+++ b/menu.html
@@ -1,51 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Covid Date-Night</title>
-    <link
-      rel="stylesheet"
-      href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css"/>
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+    <link rel="stylesheet" href="assets/style.css">
   </head>
-  <body style="background-color: #f7eaea;">
-    <!-- Navigation -->
-    <div class="top-bar" id="realEstateMenu" style="background-color: #f7eaea;">
-      <div class="top-bar-left">
+  <body class="body">
+            <!-- NAVIGATION BAR START -->
+    <div class="body navButton" id="realEstateMenu">
+      <div class="top-bar-left body">
         <div class="menu" data-responsive-menu="accordion">
-          <button>
-            <a href="index.html" class="button box" style="border-radius: 20px; background-color: #eabdbd; color: #535353;">HOME</a>
-          </button>
+            <!-- HOME BUTTON START -->
+          <button><a href="index.html" class="button box buttonbox">HOME</a></button>
+            <!-- HOME BUTTON END -->
         </div>
       </div>
     </div>
-    <!-- /Navigation -->
+            <!-- NAVIGATION BAR END -->
+            <!-- HEADER START -->
     <div class="row">
-      <div style="text-decoration-color: grey; text-align: center; text-decoration-color: darkgrey;">
+      <div class="rowyourboat">
         <h1 style="color: #535353;">Covid Date-Night</h1>
         <h5 style="color: #535353;">Stay Home, Stay Well!</h5>
-        <p>
-          <img src="./assets/images/DATENIGHT.png" alt="date-night image" class="box" style="border-radius: 100%;" width="500" height="500"/>
-        </p>
-        <br/>
-        <div class="row column" width="700" height="150">
-          <div class="column" style="margin-left: 0; margin-right: 0;">
-            <p class="callout box" style="color: #535353; border: none; background-color: #eabdbd; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
-              Below are the tools to build your Covid Date Night!<br />Click the
-              button next to each option to generate a random meal, drink, and
-              movie to enjoy.<br />Once you are happy with your selections,<br />click
-              the download button to save them for later!<br />Have a nice
-              night!
-            </p>
-            <br/>
-          </div>
-        </div>
+            <!-- HEADER END -->
+            <!-- DATE NIGHT COUPLE IMAGE START -->
+        <p><img src="./assets/images/DATENIGHT.png" alt="date-night image" class="box" style="border-radius: 100%" width="500" height="500"></p>
+            <!-- DATE NIGHT COUPLE IMAGE END -->
+            <!-- INTRO SECTION START -->
+            <br>
+            <div class="row column rowcolumn">
+              <div class="column column1">
+                <p class="callout box calloutbox">
+                  Below are the tools to build your Covid Date Night!<br />Click the
+                  button next to each option to generate a random meal, drink, and
+                  movie to enjoy.<br />Once you are happy with your selections,<br />click
+                  the download button to save them for later!<br />Have a nice
+                  night!
+                </p>
+                <br/>
+              </div>
+            </div>
+            <!-- INTRO SECTION END -->
       </div>
     </div>
-        <div class="row column"></div>
+            <!-- SECTION ROW PARAMETER START -->
     <div class="row small-up-1 medium-up-2 large-up-3">
-        <!-- START FOOD SECTION -->
+            <!-- SECTION ROW PARAMETER END -->
+            <!-- FOOD SECTION START -->
         <div class="column" style="align-items: center;">
             <div class="callout box" style="border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 5px; margin-right: 5px;">
                 <p>FOOD</p>
@@ -57,8 +60,8 @@
                 <a class="button hollow expanded box" id="foodDirect" style="border: none; background-color: #efcfcf; border-radius: 20px;color: #535353;">View a Recipe ❤️</a>
             </div>
         </div>
-        <!-- END FOOD SECTION -->
-        <!-- START DRINK SECTION -->
+            <!-- FOOD SECTION END -->
+            <!-- START DRINK SECTION -->
       <div class="column" style="align-items: center;">
         <div class="callout box" style="border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 5px; margin-right: 5px;">
             <p>DRINKS</p>
@@ -70,8 +73,8 @@
           style="border: none; background-color: #efcfcf; border-radius: 20px; color: #535353;">View a Drink ❤️</a>
         </div>
       </div>
-      <!-- END DRINK SECTION -->
-      <!-- START MOVIE SECTION -->
+            <!-- DRINK SECTION END-->
+            <!-- MOVIE SECTION START -->
       <div class="column" style="align-items: center;">
         <div class="callout box" style="border: none; background-color: #EABDBD; border-radius: 20px; margin-left: 5px; margin-right: 5px;">
             <p>MOVIES</p>
@@ -88,8 +91,8 @@
             <a class="button hollow expanded box" id="movieDirect" style="border: none; background-color: #efcfcf; border-radius: 20px; color: #535353;">View a Movie ❤️</a>
         </div>
       </div>
-      <!-- END MOVIE SECTION -->
-      <!-- START SAVE DATE-NIGHT BUTTON -->
+            <!-- MOVIE SECTION END-->
+            <!-- SAVE DATE-NIGHT BUTTON START -->
         </div>
       </div>
     </div>
@@ -97,27 +100,26 @@
       <div class="column" style="align-content: center;" width="100%">
         <div>
           <br/>
-          <button class="button hollow expanded box" id="menuDirect" style="border: none; background-color: #50ba66; border-radius: 20px; color: whitesmoke; font-size: 20px;">Save Your Date-Night Menu ❤️</button>
+          <button class="menuDirect1 button hollow expanded box" id="menuDirect" style="border: none; background-color: #50ba66; border-radius: 20px; color: whitesmoke; font-size: 20px;">Save Your Date-Night Menu ❤️</button>
         </div>
       </div>
     </div>
-      <!-- END SAVE DATE-NIGHT BUTTON -->
-    <footer>
-      <div class="row">
-        <div style="align-content: center; margin: 0; margin-bottom: 0; padding: 0;">
-          <p style="background-color: F7EAEA; text-align: center; color: white;"">
-            Cheers from the Covid Date-Night Team!<br />Covid Date-Night 2020
-            Project#1:<br />Kate, Skye, James, Mike
-          </p>
-        </div>
-      </div>
-    </footer>
-    <!-- <script src="https://foundation.sticky.js"></script> -->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-    <script src="./assets/script.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
-</html>
+            <!-- SAVE DATE-NIGHT BUTTON END -->
+            <!-- FOOTER START -->
+        <footer>
+          <div class="row">
+            <div class="row1">
+                <p class="ftag">Cheers from the Covid Date-Night Team!<br>Covid Date-Night 2020 Project#1:<br>Kate, Skye, James, Mike</p>
+            </div>
+          </div>
+        </footer>
+            <!-- FOOTER END -->
+            <!-- JS TAGS BELOW -->
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+        <script src="./assets/script.js"></script>
+        <script>
+          $(document).foundation();
+        </script>
+      </body>
+    </html>
