added audio bar with mp3 song for background music

--- a/menu.html
+++ b/menu.html
@@ -14,11 +14,14 @@
         <div class="menu" data-responsive-menu="accordion">
             <!-- HOME BUTTON START -->
           <button><a href="index.html" class="button box buttonbox">HOME</a></button>
-            <!-- HOME BUTTON END -->
+          <!-- HOME BUTTON END -->
         </div>
       </div>
     </div>
-            <!-- NAVIGATION BAR END -->
+    <!-- NAVIGATION BAR END -->
+        <audio class="top-bar-right body," controls>
+        <source src="assets\images\All Or Nothingnr.mp3">
+        </audio>
             <!-- HEADER START -->
     <div class="row">
       <div class="rowyourboat">
